@startuml

title __WEEK2's Class Diagram__\n

  namespace Week2 {
    class Week2.BankBalanceApp {
        - amountField : JTextField
        - balance : double
        - balanceLabel : JLabel
        - depositButton : JButton
        - withdrawButton : JButton
        + BankBalanceApp()
        + actionPerformed()
        {static} + main()
    }
  }
  

  namespace Week2 {
    class Week2.CoolWall {
        + CoolWall()
        {static} + main()
        - createCarLabel()
        - createPanel()
    }
  }
  

  namespace Week2 {
    class Week2.SimpleContactForm {
        {static} + main()
    }
  }
  

  Week2.BankBalanceApp .up.|> java.awt.event.ActionListener
  Week2.BankBalanceApp -up-|> javax.swing.JFrame
  Week2.CoolWall -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
